# tba-extractor

./: .gitignore  Cargo.toml  README.md  main.py  tba-extractor
src/: error.rs  main.rs
src/command/: global_args.rs  http.rs  mod.rs
src/command/_2022/: auto_taxi.rs  climb_bar.rs  mod.rs
src/data/: _match.rs  alliance.rs  mod.rs  score_breakdown_2022.rs
tba_extractor/: csv_data.py  dataset.py  option.py  tba.py
