[package]
name = "tba-extractor"
version = "0.1.0"
edition = "2021"
description = "The Blue Alliance data extractor"
authors = ["Octavia Togami <octavia.togami@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Team5818/tba-extractor"

[dependencies]
csv = "1.1.6"
log = "0.4.14"
env_logger = "0.9.0"
once_cell = "1.10.0"
serde_json = "1.0.79"
thiserror = "1.0.30"
enum_derive = "0.1.7"

[dependencies.clap]
version = "3.1.6"
features = ["derive", "unicode", "env"]

[dependencies.reqwest]
version = "0.11.9"
features = ["blocking", "json", "gzip", "brotli", "deflate"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]
